# expense-tracker-api

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  enums.py  initial_data.py  main.py  models.py  security.py
app/api/: deps.py  main.py
app/api/routes/: expenses.py  login.py  users.py
app/cruds/: expense_crud.py  user_crud.py
app/models/: __init__.py  expenses.py  users.py  utils.py
scripts/: prestart.sh
tests/: conftest.py  utils.py
tests/api/routes/: test_expense.py  test_login.py  test_users.py
tests/cruds/: test_expense_crud.py  test_user_crud.py
